Add live API documentation page

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
                 <button id="todayBtn" class="nav-btn active">Today</button>
                 <button id="historyBtn" class="nav-btn">History</button>
                 <button id="profileBtn" class="nav-btn">Profile</button>
+                <a href="/api-docs.html" class="nav-btn" target="_blank">API Docs</a>
                 <button id="logoutBtn" class="nav-btn logout">Logout</button>
             </nav>
         </header>
